<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.slacklandingpage.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="center"
                android:src="@drawable/slack_icon" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/photo_image_view"
                android:layout_alignRight="@+id/photo_image_view"
                android:layout_below="@+id/photo_image_view"
                android:layout_marginTop="16dp"
                android:text="@string/slogan"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:scaleType="center"
                android:src="@drawable/home_illo" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView2"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/info_on_slack"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:scaleType="center"
                android:src="@drawable/hero" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_marginTop="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/team_work"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:scaleType="center"
                android:src="@drawable/communication" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_marginTop="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/simple"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8" />

            <TextView
                android:background="@drawable/my_border"
                android:id="@+id/textview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview4"
                android:layout_marginTop="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_centerHorizontal="true"
                android:text="@string/android"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:scaleType="center"
                android:src="@drawable/android_badge" />

            <TextView
                android:background="@drawable/my_border"
                android:id="@+id/textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView5"
                android:layout_marginTop="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_centerHorizontal="true"
                android:text="@string/ios"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:paddingBottom="18dp"
                android:scaleType="center"
                android:src="@drawable/app_store_badge" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
